--- a/starter/index.html
+++ b/starter/index.html
@@ -4,12 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>1-Blurry-counter</title>
-    <link rel="stylesheet" href="style.css">
+    <title></title>
 </head>
 <body>
-    <section class="bg"></section>
-    <div class="loading-text">0%</div>
-    <script src="app.js"></script>
+
 </body>
 </html>
