--- a/6-calendar-tasks-trackers/index.html
+++ b/6-calendar-tasks-trackers/index.html
@@ -25,7 +25,7 @@
                     </div>
                 </div>
             </div>
-            <div class="days-container flex flex-col text-gray-500 text-lg p-3">
+            <div class="days-container h-60 flex flex-col text-gray-500 text-lg p-3">
 
                 <!-- <div class="row flex w-full justify-evenly my-1">
                     <div class="day">01</div>
@@ -33,9 +33,14 @@
             </div>
         </section>
 
-        <section class="task">
+        <section class="mt-6 task w-96 border-radius-5 shadow-lg shadow-blue-500/50 mx-auto font-sans rounded-lg bg-white px-3">
             <div class="task-name">
-                Manger du pain
+                <form action="" method="post" class="py-2">
+                    <label class="block text-lg text-orange-500 font-bold" for="taskContent">Task</label>
+                    <input class="border rounded my-2 px-2 py-1" type="text" name="task" id="taskContent">
+                    <label class="block text-lg text-orange-500 font-bold" for="taskRemaining">Is the task still to do ?</label>
+                    <input class="border rounded my-2 px-2 py-1" type="checkbox" name="remaining" id="taskRemaining">
+                </form>
             </div>
         </section>
     </div>
