--- a/6-calendar-tasks-trackers/index.html
+++ b/6-calendar-tasks-trackers/index.html
@@ -40,7 +40,7 @@
                     <input class="border rounded my-2 px-2 py-1" type="text" name="task-content" id="task-content">
                     <label class="block text-lg text-orange-500 font-bold" for="task-remaining">Is the task still to do ?</label>
                     <input class="border rounded my-2 px-2 py-1" type="checkbox" name="task-remaining" id="task-remaining">
-                    <button id="add-task" type="submit" class="block mt-3 bg-sky-500 text-white border rounded px-3 py-2">Submit</button>
+                    <button id="add-task" type="" class="block mt-3 bg-sky-500 text-white border rounded px-3 py-2">Submit</button>
                 </form>
             </div>
         </section>
