--- a/6-calendar-tasks-trackers/index.html
+++ b/6-calendar-tasks-trackers/index.html
@@ -11,8 +11,8 @@
 </head>
 <body class="bg-gray-100">
 
-    <div class="container mx-auto w-full grid grid-cols-3">
-        <section class="calendar w-96 border-radius-5 shadow-lg shadow-blue-500/50 mx-auto font-sans rounded-lg bg-white px-3">
+    <div class="container mx-auto w-full grid grid-cols-1 md:grid-cols-3 gap-4">
+        <section class="calendar w-full border-radius-5 shadow-lg shadow-blue-500/50 mx-auto font-sans rounded-lg bg-white px-3">
             <div class="calendar-header border-b -mx-3 py-3">
                 <div class="years flex w-full overflow-hidden px-3">
                     <div class="year w-full flex grow-0 shrink-0 justify-between items-center">
@@ -33,7 +33,7 @@
             </div>
         </section>
 
-        <section class="task w-96 border-radius-5 shadow-lg shadow-blue-500/50 mx-auto font-sans rounded-lg bg-white px-3">
+        <section class="task w-full border-radius-5 shadow-lg shadow-blue-500/50 mx-auto font-sans rounded-lg bg-white px-3">
             <div class="task-name">
                 <form action="" method="post" class="py-2">
                     <label class="block text-lg text-orange-500 font-bold" for="task-content">Task</label>
