--- a/7-drag-and-drop-file/index.html
+++ b/7-drag-and-drop-file/index.html
@@ -13,6 +13,8 @@
           <p>Upload multiple files with the file dialog or by dragging and dropping images onto the dashed region</p>
           <input type="file" id="fileElem" multiple accept="image/*" onchange="handleFiles(this.files)">
           <label class="button" for="fileElem">Select some files</label>
+          <div id="gallery"></div>
+          <progress id="progress-bar" max="100" value="0"></progress>
         </form>
     </div>
     <script src="app.js"></script>
